[B]Version 0.3.0[/B]
- Waiting for TV Show Changes to be made on the site so I can adjust "Latest Added" menu.
- Slight adjustments for required imports.
- Movie and TV Show MetaData forced-set to use Metahandler for now.
- Noticed Metadata wasn't showing poster images.
- Movies Section Fixes due to Site Changes.
- Noticed Site Changes

[B]Version 0.2.9[/B]
- Quick Temp. Fix for TV Searches.  Seems TV Searches are bringing up Episodes instead of TV Show Titles.
- nURL() function added to teh_tools.py for fetching webpages.  A better function method that I've put together since doing a later project.
- "Search  [API]" added for Movies and for TV (with movies as well).
- Alright, I think I finally got the ContextMenuItems setup and the Metadata showing for all available movie and tv show titles on the "Search  [API]" feature.
- Adjusted the [TV] and [MOVIE] tags to the front of labels to be more viewable.  Also added the [Country(s)] tag back on to the end of labels. (in the "Search  [API]" feature)

[B]Version 0.2.8[/B]
- Note:  Keep an eye out for my upcoming Remake Project thats sort of taken a spin into a even huger project.  I'll be having an addon in the future that will handle adding Host Plugin updates to urlresolver's plugin folder.
- UrlResolver Check disabled to increase speed !!dramatically!!.  This also allows for displaying those that might not be handded yet, which lets us find out about them and you to find out about them... and thus report them to us.
- #XBMCHUB @ irc.Freenode.net message window.
- Quick Fix for New Threads (now Latest Comments).
- Fix to 'prtItem' in listItems() thanks to lukin visiting me on irc.

[B]Version 0.2.7[/B]
- Fix made to plugin name and .py file name for Favorite Folder Empty command in Settings Window.

[B]Version 0.2.6[/B]
### Currently by default this setting's value is set to 9999, which there should hopefully not be any movies and/or episodes that have higher than that.