@@ -1,3 +1,9 @@
+[B]Version 0.3.1[/B]
+- Fix for Title (Year) fetching.
+- 
+- 
+- 
+
 [B]Version 0.3.0[/B]
 - Waiting for TV Show Changes to be made on the site so I can adjust "Latest Added" menu.
 - Slight adjustments for required imports.
